# fotor-sdk

./: .gitignore  README.md  pyproject.toml
examples/: test_all_features.py
src/fotor_sdk/: __init__.py  client.py  model_image_size_rules.py  tasks.py
tests/: test_image_size_rules.py
